# authoring-msgs

./: CMakeLists.txt  package.xml
msg/: Action.msg  Command.msg  POI.msg
