<?xml version="1.0"?>
<package>
  <name>authoring_msgs</name>
  <version>0.1.0</version>
  <description>Message files for the authoring project</description>

  <maintainer email="esenft@wisc.edu">Séverin Lemaignan</maintainer>

  <license>MIT</license>
  <author >Emmanuel Senft</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
